# sempr-lsp

./: .gitignore  README.md  server.py
lib/: CMakeLists.txt  lsp.cpp  lsp.hpp  module.cpp
sempr-lsp-vscode/: package-lock.jso.bakn  package.json  tsconfig.json
sempr-lsp-vscode/client/: package-lock.json  package.json
sempr-lsp-vscode/client/src/: extension.ts
sempr-lsp-vscode/syntaxes/: rules.tmGrammar.json
